# dotfiles-rust

./: Cargo.toml  README.md
src/: backup.rs  cli.rs  colorize.rs  commands.rs  config.rs  fs_utils.rs  main.rs
src/tests/: backup_tests.rs  commands_tests.rs  config_tests.rs  fs_utils_tests.rs  mod.rs
