[package]
name = "dotfiles-rust"
version = "0.1.0"
edition = "2024"
description = "A Rust-based CLI dotfiles sync utility"
license = "MIT"
homepage = "https://github.com/ff3rno/dotfiles-rust"
repository = "https://github.com/ff3rno/dotfiles-rust"
readme = "README.md"
keywords = ["dotfiles", "configuration", "management", "system", "cli"]
categories = ["command-line-utilities", "config", "filesystem"]

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.4", features = ["derive"] }
walkdir = "2.5.0"
dirs = "5.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
chrono = "0.4"
colored = "2.1.0"

[dev-dependencies]
tempfile = "3.10.1"
